--- a/gakunen-table.html
+++ b/gakunen-table.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>学年早見表｜年齢・干支・和暦 一括計算ツール</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <meta name="description" content="生年月日ごとの現在の学年（未就学・小学生・中学生・高校生・大学生など）を、日本の学年ルール（4/2〜翌4/1）に基づいて一覧表示する学年早見表です。">
+  <meta name="description" content="生年月日ごとの現在の学年（未就学・小学生・中学生・高校生・大学生・社会人）を、日本の学年ルール（4/2〜翌4/1）に基づいて一覧表示する学年早見表です。大学4年生＋社会人10年目までをカバーします。">
   <style>
     :root {
       --bg: #f5f5f7;
@@ -185,7 +185,7 @@
       <h1>学年早見表</h1>
       <p class="lead">
         「〇年4月2日〜翌年4月1日生まれ」を1つの学年としてまとめた早見表です。<br>
-        日本の学年ルール（4月2日〜翌年4月1日生まれが同じ学年）に基づいて、現在の区分と学年を表示します。
+        日本の学年ルール（4月2日〜翌年4月1日生まれが同じ学年）に基づき、大学4年生＋社会人10年目までを表示します（浪人・留年なしの前提）。
       </p>
       <label for="stageFilter">表示する区分</label>
       <select id="stageFilter">
@@ -194,8 +194,8 @@
         <option value="小学生">小学生</option>
         <option value="中学生">中学生</option>
         <option value="高校生">高校生</option>
-        <option value="大学生など">大学生など</option>
-        <option value="社会人など">社会人など</option>
+        <option value="大学生">大学生</option>
+        <option value="社会人">社会人</option>
       </select>
       <div class="info-line" id="schoolYearInfo"></div>
     </section>
@@ -242,11 +242,15 @@
   const today = new Date();
   const CY = today.getFullYear();
   const CM = today.getMonth() + 1;
-  const SCHOOL_YEAR = CM >= 4 ? CY : CY - 1; // 4月始まりの年度
+  // 4月始まりの学年度
+  const SCHOOL_YEAR = CM >= 4 ? CY : CY - 1;
 
-  // この年度に関係しそうな生年コホートだけを表示（おおよそ20学年ぶん）
-  const MIN_COHORT_START = SCHOOL_YEAR - 20;  // 20年前の学年
-  const MAX_COHORT_START = SCHOOL_YEAR + 1;   // 1年先まで
+  // index = SCHOOL_YEAR - elemEnterYear
+  // elemEnterYear = cohortStartYear + 7
+  // 大4(index=15) → cohortStartYear = SCHOOL_YEAR - 22
+  // 社会人10年目(index=25) → cohortStartYear = SCHOOL_YEAR - 32
+  const MIN_COHORT_START = SCHOOL_YEAR - 32; // 社会人10年目までカバー
+  const MAX_COHORT_START = SCHOOL_YEAR + 1;  // 少し先の未就学層まで
 
   function toJapaneseEra(year) {
     if (year >= 2019) return `令和${year - 2018}年`;
@@ -257,6 +261,7 @@
     return '不明（明治以前）';
   }
 
+  // index: 0=小1, 1=小2,...,12=大1,15=大4,16〜25=社会人1〜10年目
   function classifyByIndex(index) {
     let stage = '未就学';
     let grade = '–';
@@ -266,26 +271,29 @@
       grade = '–';
     } else if (index <= 5) {
       stage = '小学生';
-      grade = `${index + 1}年生`;       // 小1〜小6
+      grade = `${index + 1}年生`;          // 小1〜小6
     } else if (index <= 8) {
       stage = '中学生';
-      grade = `${index - 5}年生`;       // 中1〜中3
+      grade = `${index - 5}年生`;          // 中1〜中3
     } else if (index <= 11) {
       stage = '高校生';
-      grade = `${index - 8}年生`;       // 高1〜高3
+      grade = `${index - 8}年生`;          // 高1〜高3
     } else if (index <= 15) {
-      stage = '大学生など';
-      grade = `${index - 11}年生相当`; // 大1〜大4相当
+      stage = '大学生';
+      grade = `大学${index - 11}年生`;    // 大1〜大4
+    } else if (index <= 25) {
+      stage = '社会人';
+      grade = `社会人${index - 15}年目`;  // 社会人1〜10年目
     } else {
-      stage = '社会人など';
-      grade = '–';
+      stage = '社会人';
+      grade = '社会人11年目以降';
     }
     return { stage, grade };
   }
 
   function buildInfoLine() {
     schoolYearInfo.textContent =
-      `※ ${SCHOOL_YEAR}年度（${SCHOOL_YEAR}年4月〜${SCHOOL_YEAR + 1}年3月）の学年を表示しています。`;
+      `※ ${SCHOOL_YEAR}年度（${SCHOOL_YEAR}年4月〜${SCHOOL_YEAR + 1}年3月）の学年を表示しています（大学4年生＋社会人10年目まで・浪人や留年なし）。`;
   }
 
   function renderCohorts() {
@@ -298,10 +306,10 @@
       const birthRangeTo   = `${y + 1}年4月1日`;
 
       // この学年グループの小学校入学年度
-      const elemEnterYear = y + 7;       // 4/2〜翌4/1生まれ → 誕生年+7で小1
+      const elemEnterYear = y + 7;     // 4/2〜翌4/1生まれ → 誕生年+7で小1
       const highGradYear  = elemEnterYear + 12;
 
-      // index=0 が小1、1が小2...
+      // index=0 が小1
       const index = SCHOOL_YEAR - elemEnterYear;
       const { stage, grade } = classifyByIndex(index);
 
@@ -335,7 +343,7 @@
       const row2 = document.createElement('div');
       row2.className = 'cohort-detail-row';
       row2.innerHTML = `
-        <div class="cohort-detail-label">現在の学年</div>
+        <div class="cohort-detail-label">現在の学年・年次</div>
         <div class="cohort-detail-value">${grade}</div>
       `;
 
