--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <meta property="og:type" content="website">
 <meta property="og:title" content="年齢・干支・和暦 一括計算ツール">
 <meta property="og:description" content="生年月日を1回入力するだけで、年齢・数え年・干支・和暦・学年・節目年齢を一括表示。スマホ特化の軽量ツールです。">
-<meta property="og:image" content="https://cleverkit.github.io/age-eto-tool/ogp.png">
-<meta property="og:url" content="https://cleverkit.github.io/age-eto-tool/">
+<meta property="og:image" content="https://cleverkitjp.github.io/age-eto-tool/ogp.png">
+<meta property="og:url" content="https://cleverkitjp.github.io/age-eto-tool/">
 <meta name="twitter:card" content="summary_large_image">
 
   <title>年齢・干支・和暦・西暦・学年 一括計算ツール</title>
