--- a/index.html
+++ b/index.html
@@ -2,17 +2,18 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <!-- OGP -->
-<meta property="og:type" content="website">
-<meta property="og:title" content="年齢・干支・和暦 一括計算ツール">
-<meta property="og:description" content="生年月日を1回入力するだけで、年齢・数え年・干支・和暦・学年・節目年齢を一括表示。スマホ特化の軽量ツールです。">
-<meta property="og:image" content="https://cleverkitjp.github.io/age-eto-tool/ogp.png">
-<meta property="og:url" content="https://cleverkitjp.github.io/age-eto-tool/">
-<meta name="twitter:card" content="summary_large_image">
-
-  <title>年齢・干支・和暦・西暦・学年 一括計算ツール</title>
+  <title>年齢・干支・和暦・学年を一括計算｜スマホ特化の年齢計算ツール</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <meta name="description" content="生年月日を1回入力するだけで、年齢・数え年・干支・和暦・学年・節目年齢を一括表示する、スマホ特化の年齢計算ツールです。">
+  <meta name="description" content="生年月日を1回入力するだけで、満年齢・数え年・干支・和暦・節目年齢・学年・社会人年数までを一括表示できる、スマホ特化の年齢計算ツールです。広告を最小限に抑えた、軽くて見やすいWebアプリです。">
+  <link rel="canonical" href="https://cleverkitjp.github.io/age-eto-tool/">
+
+  <!-- OGP -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="年齢・干支・和暦・学年を一括計算｜スマホ特化の年齢計算ツール">
+  <meta property="og:description" content="生年月日を1回入力するだけで、満年齢・数え年・干支・和暦・節目年齢・学年・社会人年数までを一括表示できる、スマホ特化の年齢計算ツールです。">
+  <meta property="og:image" content="https://cleverkitjp.github.io/age-eto-tool/ogp.png">
+  <meta property="og:url" content="https://cleverkitjp.github.io/age-eto-tool/">
+  <meta name="twitter:card" content="summary_large_image"> 
   <style>
     :root {
       --bg: #f5f5f7;
