--- a/age-table.html
+++ b/age-table.html
@@ -2,9 +2,10 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>年齢早見表｜年齢・干支・和暦 一括計算ツール</title>
+  <title>年齢早見表｜生まれ年から今年の年齢・干支・和暦・長寿祝いを確認</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <meta name="description" content="生まれ年ごとの今年の満年齢・和暦・干支を一覧できる年齢早見表です。還暦・喜寿・米寿・卒寿などの長寿祝いも自動で表示します。スマホで見やすい縦スクロールのカードUIです。">
+  <meta name="description" content="生まれ年ごとに、今年の満年齢・和暦・干支・還暦や米寿などの長寿祝いを一覧できる年齢早見表です。1920年〜今年まで対応し、スマホでも見やすい縦スクロールUIです。">
+  <link rel="canonical" href="https://cleverkitjp.github.io/age-eto-tool/age-table.html">
   <style>
     :root {
       --bg: #f5f5f7;
