--- a/gakunen-table.html
+++ b/gakunen-table.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
-  <title>学年早見表｜年齢・干支・和暦 一括計算ツール</title>
+   <meta charset="UTF-8">
+  <title>学年早見表｜4月2日〜翌4月1日生まれと学年・大学年次・社会人年数</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <meta name="description" content="生年月日ごとの現在の学年（未就学・小学生・中学生・高校生・大学生・社会人）を、日本の学年ルール（4/2〜翌4/1）に基づいて一覧表示する学年早見表です。大学4年生＋社会人10年目までをカバーします。">
+  <meta name="description" content="4月2日〜翌年4月1日生まれを1つの学年として、日本の学年ルールにもとづき、現在の学年・大学1〜4年生・社会人1〜10年目までを一覧表示する学年早見表です。">
+  <link rel="canonical" href="https://cleverkitjp.github.io/age-eto-tool/gakunen-table.html">
   <style>
     :root {
       --bg: #f5f5f7;
