--- a/calendar-table.html
+++ b/calendar-table.html
@@ -2,9 +2,10 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>和暦⇔西暦・干支 早見表｜年齢・干支・和暦 一括計算ツール</title>
+  <title>和暦・西暦・干支 早見表｜明治・大正・昭和・平成・令和</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <meta name="description" content="明治・大正・昭和・平成・令和の各年について、西暦・和暦・干支を一覧できる早見表です。スマホで見やすいタブ＋縦スクロールUIです。">
+  <meta name="description" content="明治・大正・昭和・平成・令和の各年について、西暦・和暦・干支を一覧表示できる早見表です。スマホでも見やすいタブ切り替えと縦スクロールUIで確認できます。">
+  <link rel="canonical" href="https://cleverkitjp.github.io/age-eto-tool/calendar-table.html">
   <style>
     :root {
       --bg: #f5f5f7;
