--- a/how-to.html
+++ b/how-to.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
-  <title>使い方｜年齢・干支・和暦 一括計算ツール</title>
+   <meta charset="UTF-8">
+  <title>使い方ガイド｜年齢・干支・和暦・学年 一括計算ツール</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <meta name="description" content="年齢・干支・和暦・学年などを一括で計算するトップページと、早見表ページの使い方を、具体例つきで説明します。">
+  <meta name="description" content="年齢・干支・和暦・学年を一括で計算するトップページと、年齢早見表・学年早見表・和暦干支早見表の具体的な使い方をケース別に解説しています。">
+  <link rel="canonical" href="https://cleverkitjp.github.io/age-eto-tool/how-to.html">
   <style>
     :root {
       --bg: #f5f5f7;
