--- a/about.html
+++ b/about.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
   <title>このサイトについて｜年齢・干支・和暦 一括計算ツール</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <meta name="description" content="年齢・干支・和暦・学年などをまとめて確認できる、本サイトの目的と計算ロジック・免責事項・広告ポリシーについて説明します。">
+  <meta name="description" content="年齢・干支・和暦・学年などをまとめて確認できる本ツールの目的、計算ロジック、プライバシー方針、広告・アフィリエイト、免責事項について説明します。">
+  <link rel="canonical" href="https://cleverkitjp.github.io/age-eto-tool/about.html">
   <style>
     :root {
       --bg: #f5f5f7;
