--- a/index.html
+++ b/index.html
@@ -346,8 +346,11 @@
         <a href="how-to.html">使い方</a>
       </div>
       <div class="ad-slot">
-        ここに広告を1つだけ表示します（例：レスポンシブ広告タグ）。
+       <!-- ここに広告を1つだけ表示します（例：レスポンシブ広告タグ）。-->
       </div>
+      <p class="back-to-top">
+       <a href="https://cleverkitjp.github.io/">cleverkitjp トップページへ戻る</a>
+      </p>
     </footer>
   </main>
 </div>
