--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>年齢・干支・和暦・学年を一括計算｜スマホ特化の年齢計算ツール</title>
+  <title>生まれ年オールインワン判定｜年齢・干支・和暦・厄年が一瞬で分かる無料ツール</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name="description" content="生年月日を1回入力するだけで、満年齢・数え年・干支・和暦・節目年齢・学年・社会人年数までを一括表示できる、スマホ特化の年齢計算ツールです。広告を最小限に抑えた、軽くて見やすいWebアプリです。">
   <link rel="canonical" href="https://cleverkitjp.github.io/age-eto-tool/">
 
   <!-- OGP -->
   <meta property="og:type" content="website">
-  <meta property="og:title" content="年齢・干支・和暦・学年を一括計算｜スマホ特化の年齢計算ツール">
+  <meta property="og:title" content="生まれ年オールインワン判定｜年齢・干支・和暦・厄年が一瞬で分かる無料ツール">
   <meta property="og:description" content="生年月日を1回入力するだけで、満年齢・数え年・干支・和暦・節目年齢・学年・社会人年数までを一括表示できる、スマホ特化の年齢計算ツールです。">
   <meta property="og:image" content="https://cleverkitjp.github.io/age-eto-tool/ogp.png">
   <meta property="og:url" content="https://cleverkitjp.github.io/age-eto-tool/">
@@ -217,6 +217,17 @@
       background: #f9fafb;
     }
   </style>
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebApplication",
+  "name": "年齢・干支・和暦 一括計算ツール",
+  "url": "https://cleverkitjp.github.io/age-eto-tool/",
+  "applicationCategory": "Utility",
+  "operatingSystem": "All"
+}
+</script>
+
 </head>
 <body>
 <div class="app">
