--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 {
   "@context": "https://schema.org",
   "@type": "WebApplication",
-  "name": "年齢・干支・和暦 一括計算ツール",
+  "name": "生まれ年オールインワン判定｜年齢・干支・和暦・厄年が一瞬で分かる無料ツール",
   "url": "https://cleverkitjp.github.io/age-eto-tool/",
   "applicationCategory": "Utility",
   "operatingSystem": "All"
@@ -233,8 +233,8 @@
 <div class="app">
   <header>
     <div class="header-inner">
-      <div class="site-title">年齢・干支・和暦 一括計算</div>
-      <div style="font-size:12px;color:#6b7280;">シンプルでスマホ専用</div>
+      <div class="site-title">生まれ年オールインワン判定</div>
+      <div style="font-size:12px;color:#6b7280;">年齢・干支・和暦・厄年が一瞬で分かる無料ツール</div>
     </div>
   </header>
 
