--- a/age-table.html
+++ b/age-table.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name="description" content="生まれ年ごとに、今年の満年齢・和暦・干支・還暦や米寿などの長寿祝いを一覧できる年齢早見表です。1920年〜今年まで対応し、スマホでも見やすい縦スクロールUIです。">
   <link rel="canonical" href="https://cleverkitjp.github.io/age-eto-tool/age-table.html">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9727255179923866" crossorigin="anonymous"></script>
   <style>
     :root {
       --bg: #f5f5f7;
