--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name="description" content="年齢・干支・和暦・学年などをまとめて確認できる本ツールの目的、計算ロジック、プライバシー方針、広告・アフィリエイト、免責事項について説明します。">
   <link rel="canonical" href="https://cleverkitjp.github.io/age-eto-tool/about.html">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9727255179923866" crossorigin="anonymous"></script>
   <style>
     :root {
       --bg: #f5f5f7;
