--- a/calendar-table.html
+++ b/calendar-table.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name="description" content="明治・大正・昭和・平成・令和の各年について、西暦・和暦・干支を一覧表示できる早見表です。スマホでも見やすいタブ切り替えと縦スクロールUIで確認できます。">
   <link rel="canonical" href="https://cleverkitjp.github.io/age-eto-tool/calendar-table.html">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9727255179923866" crossorigin="anonymous"></script>
   <style>
     :root {
       --bg: #f5f5f7;
