--- a/gakunen-table.html
+++ b/gakunen-table.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name="description" content="4月2日〜翌年4月1日生まれを1つの学年として、日本の学年ルールにもとづき、現在の学年・大学1〜4年生・社会人1〜10年目までを一覧表示する学年早見表です。">
   <link rel="canonical" href="https://cleverkitjp.github.io/age-eto-tool/gakunen-table.html">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9727255179923866" crossorigin="anonymous"></script>
   <style>
     :root {
       --bg: #f5f5f7;
