--- a/how-to.html
+++ b/how-to.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name="description" content="年齢・干支・和暦・学年を一括で計算するトップページと、年齢早見表・学年早見表・和暦干支早見表の具体的な使い方をケース別に解説しています。">
   <link rel="canonical" href="https://cleverkitjp.github.io/age-eto-tool/how-to.html">
+   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9727255179923866" crossorigin="anonymous"></script>
   <style>
     :root {
       --bg: #f5f5f7;
