--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
   <meta property="og:description" content="生年月日を1回入力するだけで、満年齢・数え年・干支・和暦・節目年齢・学年・社会人年数までを一括表示できる、スマホ特化の年齢計算ツールです。">
   <meta property="og:image" content="https://cleverkitjp.github.io/age-eto-tool/ogp.png">
   <meta property="og:url" content="https://cleverkitjp.github.io/age-eto-tool/">
-  <meta name="twitter:card" content="summary_large_image"> 
+  <meta name="twitter:card" content="summary_large_image">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9727255179923866" crossorigin="anonymous"></script>
   <style>
     :root {
       --bg: #f5f5f7;
