Add Google Analytics tracking script

--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <title>生まれ年オールインワン判定｜年齢・干支・和暦・厄年が一瞬で分かる無料ツール</title>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-F6517NYNFF"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-F6517NYNFF');
+</script>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name="description" content="生年月日を1回入力するだけで、満年齢・数え年・干支・和暦・節目年齢・学年・社会人年数までを一括表示できる、スマホ特化の年齢計算ツールです。広告を最小限に抑えた、軽くて見やすいWebアプリです。">
   <link rel="canonical" href="https://cleverkitjp.github.io/age-eto-tool/">
