--- a/age-table.html
+++ b/age-table.html
@@ -6,6 +6,14 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name="description" content="生まれ年ごとに、今年の満年齢・和暦・干支・還暦や米寿などの長寿祝いを一覧できる年齢早見表です。1920年〜今年まで対応し、スマホでも見やすい縦スクロールUIです。">
   <link rel="canonical" href="https://cleverkitjp.github.io/age-eto-tool/age-table.html">
+  <link rel="stylesheet" href="https://cleverkitjp.github.io/common.css">
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-F6517NYNFF"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-F6517NYNFF');
+  </script>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9727255179923866" crossorigin="anonymous"></script>
   <style>
     :root {
@@ -213,9 +221,6 @@
         <a href="how-to.html">使い方</a>｜
         <a href="about.html">このサイトについて</a>
       </div>
-      <div class="ad-slot">
-        ここに広告を1つだけ表示します（例：レスポンシブ広告タグ）。
-      </div>
     </footer>
   </main>
 </div>
@@ -376,6 +381,22 @@
     buildDecadeOptions();
     renderList();
   });
+</script>
+
+<div id="ck-footer-container"></div>
+<script>
+  (function() {
+    var container = document.getElementById('ck-footer-container');
+    if (!container) return;
+
+    fetch('https://cleverkitjp.github.io/footer.html')
+      .then(function(r) { return r.text(); })
+      .then(function(html) {
+        container.innerHTML = html;
+        try { (adsbygoogle = window.adsbygoogle || []).push({}); } catch (e) {}
+      })
+      .catch(function(e) {});
+  })();
 </script>
 
 </body>
