--- a/calendar-table.html
+++ b/calendar-table.html
@@ -6,6 +6,14 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name="description" content="明治・大正・昭和・平成・令和の各年について、西暦・和暦・干支を一覧表示できる早見表です。スマホでも見やすいタブ切り替えと縦スクロールUIで確認できます。">
   <link rel="canonical" href="https://cleverkitjp.github.io/age-eto-tool/calendar-table.html">
+  <link rel="stylesheet" href="https://cleverkitjp.github.io/common.css">
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-F6517NYNFF"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-F6517NYNFF');
+  </script>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9727255179923866" crossorigin="anonymous"></script>
   <style>
     :root {
@@ -220,9 +228,6 @@
       <div class="footer-links">
         <a href="index.html">一括計算ツールに戻る</a>
       </div>
-      <div class="ad-slot">
-        ここに広告を1つだけ表示します（例：レスポンシブ広告タグ）。
-      </div>
     </footer>
   </main>
 </div>
@@ -339,6 +344,22 @@
       ERAS.find(e => e.key === 'reiwa') || ERAS[ERAS.length - 1];
     setActiveEra(defaultEra.key);
   });
+</script>
+
+<div id="ck-footer-container"></div>
+<script>
+  (function() {
+    var container = document.getElementById('ck-footer-container');
+    if (!container) return;
+
+    fetch('https://cleverkitjp.github.io/footer.html')
+      .then(function(r) { return r.text(); })
+      .then(function(html) {
+        container.innerHTML = html;
+        try { (adsbygoogle = window.adsbygoogle || []).push({}); } catch (e) {}
+      })
+      .catch(function(e) {});
+  })();
 </script>
 
 </body>
