--- a/gakunen-table.html
+++ b/gakunen-table.html
@@ -6,6 +6,14 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name="description" content="4月2日〜翌年4月1日生まれを1つの学年として、日本の学年ルールにもとづき、現在の学年・大学1〜4年生・社会人1〜10年目までを一覧表示する学年早見表です。">
   <link rel="canonical" href="https://cleverkitjp.github.io/age-eto-tool/gakunen-table.html">
+  <link rel="stylesheet" href="https://cleverkitjp.github.io/common.css">
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-F6517NYNFF"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-F6517NYNFF');
+  </script>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9727255179923866" crossorigin="anonymous"></script>
   <style>
     :root {
@@ -212,9 +220,6 @@
       <div class="footer-links">
         <a href="index.html">一括計算ツールに戻る</a>
       </div>
-      <div class="ad-slot">
-        ここに広告を1つだけ表示します（例：レスポンシブ広告タグ）。
-      </div>
     </footer>
   </main>
 </div>
@@ -373,6 +378,22 @@
     buildInfoLine();
     renderCohorts();
   });
+</script>
+
+<div id="ck-footer-container"></div>
+<script>
+  (function() {
+    var container = document.getElementById('ck-footer-container');
+    if (!container) return;
+
+    fetch('https://cleverkitjp.github.io/footer.html')
+      .then(function(r) { return r.text(); })
+      .then(function(html) {
+        container.innerHTML = html;
+        try { (adsbygoogle = window.adsbygoogle || []).push({}); } catch (e) {}
+      })
+      .catch(function(e) {});
+  })();
 </script>
 
 </body>
