--- a/about.html
+++ b/about.html
@@ -35,8 +35,8 @@
     .app {
       max-width: 480px;
       margin: 0 auto;
-      min-height: 100vh;
-      padding-bottom: 72px;
+      min-height: 100dvh;
+      padding-bottom: calc(72px + env(safe-area-inset-bottom));
     }
     header {
       position: sticky;
