--- a/index.html
+++ b/index.html
@@ -212,20 +212,11 @@
       font-weight: 600;
       border-top: 2px solid var(--accent);
     }
-    footer {
+    .footer {
       padding: 12px;
       font-size: 11px;
       color: var(--text-sub);
       text-align: center;
-    }
-    .ad-slot {
-      margin-top: 8px;
-      padding: 12px;
-      border-radius: 12px;
-      border: 1px dashed var(--border);
-      font-size: 11px;
-      color: var(--text-sub);
-      background: #f9fafb;
     }
   </style>
   <script type="application/ld+json">
