--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
       font-weight: 600;
       border-top: 2px solid var(--accent);
     }
-    .footer {
+    .footer-links {
       padding: 12px;
       font-size: 11px;
       color: var(--text-sub);
@@ -346,13 +346,7 @@
           <div class="result-value" id="highGradYear">–</div>
         </div>
       </div>
-      <div class="bottom-links">
-        <span class="badge">早見表</span>
-        <a href="age-table.html">年齢早見表</a>
-        <a href="gakunen-table.html">学年早見表</a>
-      </div>
     </section>
-
       <div class="footer-links">
         <a href="about.html">このサイトについて</a>｜
         <a href="how-to.html">使い方</a>
